--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>assertj-core</artifactId>
 			<version>3.15.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jool</artifactId>
+			<version>0.9.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
